--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -44,7 +44,7 @@
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
     <string name="title">ശീർഷകം</string>
     <string name="tag">അടയാളം</string>
-    <string name="url_or_uri">URL</string>
+    <string name="url">URL</string>
     <string name="add_feed">ഫീഡ് ചേർക്കൂ</string>
     <string name="action_settings">ക്രമീകരണങ്ങൾ</string>
     <string name="touch_to_play_video">വീഡിയോ പ്ലേ ചെയ്യാൻ തൊടുക</string>
@@ -80,7 +80,7 @@
     <string name="use_detect_language">ഭാഷ തിരിച്ചറിയുക</string>
     <string name="description_for_read_aloud">ലേഖന ഭാഷ സ്വയമേവ കണ്ടെത്തുന്നു</string>
     <string name="include_mobile_hotspots">മൊബൈൽ ഹോട്ട്‌സ്‌പോട്ടുകൾ ഉൾപ്പെടുത്തുക</string>
-    <string name="invalid_url_or_uri">സാധുവായ യുആർഎൽ അല്ല</string>
+    <string name="invalid_url">സാധുവായ യുആർഎൽ അല്ല</string>
     <string name="add_item">ഇനം ചേർക്കുക</string>
     <string name="go_to_feed">%1$s എന്നതിലേക്ക് പോകുക</string>
     <string name="block_list">തടസ്സപ്പെടുത്തി വച്ചിരിക്കുന്നവയുടെ പട്ടിക</string>
