--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -92,7 +92,7 @@
     <string name="mark_items_above_as_read">Отметить выше как прочитанное</string>
     <string name="javascript">JavaScript</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
-    <string name="url_or_uri">URL-адрес</string>
+    <string name="url">URL-адрес</string>
     <string name="fetching_full_article">Статья загружается целиком…</string>
     <string name="failed_to_fetch_full_article">Не удалось загрузить полную статью</string>
     <string name="fetch_full_articles_by_default">По умолчанию загружать статьи целиком</string>
@@ -135,7 +135,7 @@
     <string name="generate_extra_unique_ids">Генерировать дополнительные уникальные ID</string>
     <string name="only_enable_for_bad_id_feeds">Включить только для лент с плохими ID</string>
     <string name="sync_status">Состояние синхронизации</string>
-    <string name="invalid_url_or_uri">Неверный URL-адрес</string>
+    <string name="invalid_url">Неверный URL-адрес</string>
     <string name="syncing">Синхронизируется</string>
     <string name="failed_to_import_OPML">Не удалось импортировать OPML</string>
     <string name="failed_to_export_OPML">Не удалось экспортировать OPML</string>
