--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
   <string name="tag">Tag</string>
   <string name="add_feed_search_hint">Feed URL</string>
   <string name="title">Title</string>
+  <string name="nostr_feed_description">Nostr articles by %1$s</string>
 
   <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
   <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
